# pylearn

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml
docs/: app.js  exercises.json  index.html  lessons.js  style.css  tutor.js
mcp-servers/pylearn-tutor/: .env.example  .gitignore  BUILD_SUMMARY.md  INTEGRATION.md  QUICKSTART.md  README.md  REFERENCE.md  VERIFICATION.txt  api_bridge.py  pyproject.toml  requirements.txt  server.py  start-api.sh  start-server.sh
mcp-servers/pylearn-tutor/prompts/: design_lesson.txt  exercise_hint.txt  generate_page.txt  tutor_chat.txt
mcp-servers/pylearn-tutor/systemd/: pytor-tutor.service
mcp-servers/pylearn-tutor/tests/: __init__.py  test_server.py
pylearn/: __init__.py  __main__.py  cli.py  progress.py  runner.py
pylearn/exercises/: __init__.py  api_calling.py  base.py  conditionals.py  data_types.py  dictionaries.py  fastapi_ex.py  functions.py  lists_sets.py  variables.py
